# mslearn-ai-language

./: pyproject.toml
Labfiles/01-analyze-text/Python/text-analysis/: text-analysis.py
Labfiles/02-qna/Python/qna-app/: qna-app.py
Labfiles/03-language/Python/clock-client/: clock-client.py
Labfiles/03b-language-app/Python/clock-client/: clock-client.py
Labfiles/04-text-classification/Python/classify-text/: classify-text.py
Labfiles/05-custom-entity-recognition/Python/custom-entities/: custom-entities.py
Labfiles/06-translate-text/Python/text-translation/: .env
Labfiles/06b-translator-sdk/Python/translate-text/: translate.py
Labfiles/07-speech/Python/speaking-clock/: speaking-clock.py
Labfiles/08-speech-translation/Python/translator/: translator.py
